signup.html, about.html completed.

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -61,7 +61,7 @@ text-align: center;
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: rgb(120, 108, 250); font-weight: 900;">Find Yourself</a>
+      <a class="navbar-brand" href="#" style="color: rgb(120, 108, 250); font-weight: 900;"><img src="\static\heading001.png" class="rounded mx-auto d-block" width="214" height="51"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -86,7 +86,7 @@ text-align: center;
   </nav>
   
   <div class="container bootstrap snippets bootdey">
-    
+    <img src="\static\heading001.png" class="rounded mx-auto d-block" width="642" height="153"> 
    
   </div><!-- /.container -->
 <div class="login-form">
