--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,6 +9,7 @@
 
 
 <style>
+
 .d-flex{
   text-align:right;
 }  
@@ -61,7 +62,8 @@ text-align: center;
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: rgb(120, 108, 250); font-weight: 900;">Find Yourself</a>
+
+      <a class="navbar-brand" href="#" style="color: rgb(120, 108, 250); font-weight: 900;"><img src="\static\heading001.png" class="rounded mx-auto d-block" width="214" height="51"> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -90,7 +92,7 @@ text-align: center;
    
   </div><!-- /.container -->
 <div>
-    
+  <img src="\static\heading001.png" class="rounded mx-auto d-block" width="642" height="153"> 
     <img src="\static\home.png" class="rounded mx-auto d-block" width="500" height="500"> 
     <img src="\static\home1.png" class="rounded mx-auto d-block" width="600" height="600"> 
     <div class="d-grid gap-2 col-6 mx-auto" align="center">
