First level html pages completed. commit 001.

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -93,8 +93,10 @@ text-align: center;
   </div><!-- /.container -->
 <div>
     
-    <img src="\static\heading001.png" class="rounded mx-auto d-block" width="642" height="153"> 
-    <img src="\static\home1.png" class="rounded mx-auto d-block" width="600" height="600"> 
+    
+    <img src="\static\heading001.png" class="rounded mx-auto d-block img-fluid" width="642" height="153"> 
+    <h1 style="text-align: center; font-weight: 900; color:rgb(226, 116, 43); font-size: 80px;">About</h1>
+    <img src="\static\home1.png" class="rounded mx-auto d-block img-fluid" width="600" height="600"> 
     <div class="d-grid gap-2 col-6 mx-auto" align="center">
     <h3 style="text-align: justify;">Find Yourself is build for those who want to keep their daily things scribbled on an online portal. 
         Find Yourself was born from a thought of writing down what everyone is going through and finding out the inner person in all of us. 
