--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -92,9 +92,9 @@ text-align: center;
    
   </div><!-- /.container -->
 <div>
-  <img src="\static\heading001.png" class="rounded mx-auto d-block" width="642" height="153"> 
-    <img src="\static\home.png" class="rounded mx-auto d-block" width="500" height="500"> 
-    <img src="\static\home1.png" class="rounded mx-auto d-block" width="600" height="600"> 
+  <img src="\static\heading001.png" class="rounded mx-auto d-block img-fluid" width="642" height="153"> 
+    <img src="\static\home.png" class="rounded mx-auto d-block img-fluid" width="500" height="500"> 
+    <img src="\static\home1.png" class="rounded mx-auto d-block img-fluid" width="600" height="600"> 
     <div class="d-grid gap-2 col-6 mx-auto" align="center">
     <button type="button" class="btn btn-outline-danger btn-lg">Find Yourself</button><br><br><br><br>
 
