--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -86,7 +86,7 @@ text-align: center;
   </nav>
   
   <div class="container bootstrap snippets bootdey">
-    <img src="\static\heading001.png" class="rounded mx-auto d-block" width="642" height="153"> 
+    <img src="\static\heading001.png" class="rounded mx-auto d-block img-fluid" width="642" height="153"> 
    
   </div><!-- /.container -->
 <div class="login-form">
