--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -98,10 +98,11 @@ text-align: center;
     <h1 style="text-align: center; font-weight: 900; color:rgb(226, 116, 43); font-size: 80px;">About</h1>
     <img src="\static\home1.png" class="rounded mx-auto d-block img-fluid" width="600" height="600"> 
     <div class="d-grid gap-2 col-6 mx-auto" align="center">
-    <h3 style="text-align: justify;">Find Yourself is build for those who want to keep their daily things scribbled on an online portal. 
-        Find Yourself was born from a thought of writing down what everyone is going through and finding out the inner person in all of us. 
-        Find Yourself provides it's users a free online diary where the users can write down their thoughts, daily plans or anything else they are dealing with.
+    <h3 style="text-align: justify;">Find Yourself is made for those who want to keep their daily things scribbled on an online portal. 
+        Find Yourself was born from the thought of writing down what everyone is going through and finding out the inner person in all of us. 
+        Find Yourself provides its users a free online diary where the users can write down their thoughts, daily plans, or anything else they are dealing with. 
         Find yourself by writing diaries. Happy writing.
+
     </h3><br><br><br><br>
 
     </div>
