--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -68,18 +68,18 @@ text-align: center;
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
           
          
         </ul>
         <div class="d-flex ml-auto" >
           
-          <button class="btn btn-outline-secondary " type="submit" style="float: right;">Log In</button>&nbsp;&nbsp;&nbsp;
-          <button class="btn btn-outline-primary" type="submit" style="float: right;">Sign Up</button>
+          <a href="/login"><button class="btn btn-outline-secondary " type="submit" style="float: right;" >Log In</button></a>&nbsp;&nbsp;&nbsp;
+          <a href="/signup"><button class="btn btn-outline-primary" type="submit" style="float: right;">Sign Up</button></a>
         </div>
       </div>
     </div>
