updated html links for signup and login pages.

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -106,7 +106,7 @@ text-align: center;
             <a href="#" class="float-right">Forgot Password?</a>
         </div>        
     </form>
-    <p class="text-center"><a href="#">Create an Account</a></p>
+    <p class="text-center"><a href="/sighnup">Create an Account</a></p>
 </div>
 <footer class="section footer-classic context-dark bg-image footerclass" style="background: #2d3246;">
   <br>
