--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -112,7 +112,7 @@ text-align: center;
         </div>
              
     </form>
-    <p class="text-center"><a href="#">Alread have an Account?</a></p>
+    <p class="text-center"><a href="/login">Alread have an Account?</a></p>
 </div>
 <footer class="section footer-classic context-dark bg-image footerclass" style="background: #2d3246;">
   <br>
