--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -89,23 +89,26 @@ text-align: center;
     <img src="\static\heading001.png" class="rounded mx-auto d-block img-fluid" width="642" height="153"> 
    
   </div><!-- /.container -->
+  {% with messages=get_flashed_messages(category=true)%
+  
+  {%endwith%}
 <div class="login-form">
-    <form action="/examples/actions/confirmation.php" method="post">
+    <form method="POST">
         <h2 class="text-center">Sign Up</h2>       
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="First Name" required="required">
+            <input type="text" class="form-control" placeholder="First Name" required="required" name="firstName" id="firstName">
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Last Name" required="required">
+            <input type="text" class="form-control" placeholder="Last Name" required="required" name="lastName" id="lastName">
         </div>
         <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email Id" required="required">
+            <input type="email" class="form-control" placeholder="Email Id" required="required" name="email" id="email">
         </div>
         <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password" required="required">
+            <input type="password" class="form-control" placeholder="Password" required="required" name="password1" id="password1">
         </div>
         <div class="form-group">
-            <input type="password" class="form-control" placeholder="Confrim Password" required="required">
+            <input type="password" class="form-control" placeholder="Confrim Password" required="required" name="password2" id="password2">
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
