--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -58,17 +58,40 @@ width: 100%;
 text-align: center; 
 }
 </style>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    $('.alert').alert()
+  })
+</script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="#" style="color: rgb(120, 108, 250); font-weight: 900;"><img src="\static\heading001.png" class="rounded mx-auto d-block" width="214" height="51"> </a>
+      <a class="navbar-brand" href="#" style="color: rgb(120, 108, 250); font-weight: 900;"><img src="\static\heading001.png" class="rounded mx-auto d-block" width="198" height="47"> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {% if user.is_authenticated %}
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+        </ul>
+          <div class="d-flex ml-auto"  >
+          
+            <a href=""><button class="btn btn-outline-secondary " type="submit" style="float: right;" ></button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/logout"><button class="btn btn-outline-primary" type="submit" style="float: right;">Logout</button></a>
+          </div>
+
+          {% else %}
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
@@ -79,37 +102,34 @@ text-align: center;
          
         </ul>
         <div class="d-flex ml-auto" >
-          
           <a href="/login"><button class="btn btn-outline-secondary " type="submit" style="float: right;" >Log In</button></a>&nbsp;&nbsp;&nbsp;
           <a href="/signup"><button class="btn btn-outline-primary" type="submit" style="float: right;">Sign Up</button></a>
         </div>
+        {% endif %}
       </div>
     </div>
   </nav>
+  <br><br><br>
   {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     {% for category,message in messages %}
     {% if category=='error' %}
-    <div class="alert alert-danger alert-dismissible" role="alert">
-        {{ message }}
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{message}} Please Try again.
+      <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
     </div>
     
     {% else %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
-        </button>
+      {{message}}
+     <a href="/login" st>Click here to login.</a>
+     <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
     </div>
     {% endif %}
     {% endfor %}
   {% endif %}
   {% endwith %}
-  <div class="container bootstrap snippets bootdey">
-    
-   
-  </div><!-- /.container -->
+<br><br><br><br>
 <div>
   {% block mainbody %} {% endblock %}
     </div>
