--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -87,7 +87,7 @@ text-align: center;
         </ul>
           <div class="d-flex ml-auto"  >
           
-            <a href=""><button class="btn btn-outline-secondary " type="submit" style="float: right;" ></button></a>&nbsp;&nbsp;&nbsp;
+            <a class="nav-link active" aria-current="page" href="" style="text-shadow: black;">{{user.firstName+" "+user.lastName}}</a>&nbsp;&nbsp;&nbsp;
             <a href="/logout"><button class="btn btn-outline-primary" type="submit" style="float: right;">Logout</button></a>
           </div>
 
