--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,7 +6,7 @@
     <img src="\static\home.png" class="rounded mx-auto d-block img-fluid" width="500" height="500"> 
     <img src="\static\home1.png" class="rounded mx-auto d-block img-fluid" width="600" height="600"> 
     <div class="d-grid gap-2 col-6 mx-auto" align="center">
-    <button type="button" class="btn btn-outline-danger btn-lg">Find Yourself</button><br><br><br><br>
+    <a href="\feed"><button type="button" class="btn btn-outline-danger btn-lg">Find Yourself</button></a><br><br><br><br>
 
     </div>
 </div>
