--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -41,7 +41,7 @@
   opacity:1;
 }
   
-.dropdown-menu {
+/* .dropdown-menu {
   opacity:.3;
   -webkit-transform-origin: top;
   transform-origin: top;
@@ -51,7 +51,7 @@
   display: block; 
   transition: all 0.3s linear;
   -webkit-transition: all 0.3s linear;
-}
+} */
 .footerclass {
 width: 100%;
 
@@ -77,18 +77,38 @@ text-align: center;
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/feed">My Feed</a>
+          </li>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/account">My Diaries</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/write">Write My Diary</a>
+          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
         </ul>
           <div class="d-flex ml-auto"  >
-          
-            <a class="nav-link active" aria-current="page" href="" style="text-shadow: black;">{{user.firstName+" "+user.lastName}}</a>&nbsp;&nbsp;&nbsp;
-            <a href="/logout"><button class="btn btn-outline-primary" type="submit" style="float: right;">Logout</button></a>
+            
+            
+            <div class="dropdown" style="background: transparent;">
+              <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                </svg>&nbsp;&nbsp;{{user.firstName+" "+user.lastName}}
+              </button>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="/account">My Diaries</a>
+                
+                <a class="dropdown-item" href="/write">Write New Diary</a>
+                <a class="dropdown-item" href="/logout">Log out</a>
+              </div>
+            </div>
           </div>
 
           {% else %}
@@ -102,8 +122,13 @@ text-align: center;
          
         </ul>
         <div class="d-flex ml-auto" >
-          <a href="/login"><button class="btn btn-outline-secondary " type="submit" style="float: right;" >Log In</button></a>&nbsp;&nbsp;&nbsp;
-          <a href="/signup"><button class="btn btn-outline-primary" type="submit" style="float: right;">Sign Up</button></a>
+          <a href="/login"><button class="btn  " type="submit" style="float: right;" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+          </svg> Log In</button></a>
+          <a href="/signup"><button class="btn " type="submit" style="float: right;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
+            <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+          </svg><i class="bi bi-box-arrow-in-right"></i>  Sign Up</button></a>
         </div>
         {% endif %}
       </div>
