--- a/website/templates/account.html
+++ b/website/templates/account.html
@@ -5,8 +5,14 @@
 
     {% for entry in user.diaries %}
     <br>
-    <div class="container p-4 my-4 text-white" style="background-color: gray; width: 70%;">
-      {{entry.date}}<hr><br>  <h4 style="text-align:justify;">{{entry.data}}</h4>
+    <div class="container rounded p-4 my-4 text-white" style="background-color: gainsboro; width: 70%;">
+      <h7 style="color: black;">{{entry.date}}</h7><br>
+      {% if entry.privacy=='2' %}
+      <h6 style="color:blue;">Public</h6>
+      {% else %}
+      <h6 style="color:blue;">Private</h6>
+      {% endif %}
+      <hr><br>  <h5 style="text-align:justify; color: black;">{{entry.data}}</h5>
 
     </div>
     
