--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -72,7 +72,7 @@ text-align: center;
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="#" style="color: rgb(120, 108, 250); font-weight: 900;"><img src="\static\heading001.png" class="rounded mx-auto d-block" width="198" height="47"> </a>
+      <a class="navbar-brand" href="/" style="color: rgb(120, 108, 250); font-weight: 900;"><img src="\static\heading001.png" class="rounded mx-auto d-block" width="198" height="47"> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -184,5 +184,8 @@ text-align: center;
       </a>
       <br><br>
  </footer>
+ <script src="{{ url_for('static', filename='main.js')}}">
+  
+</script>
 </body>
 </html>
