Forgot password module implemented.

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -16,7 +16,7 @@
         </div>
         <div class="clearfix">
             <label class="float-left form-check-label"><input type="checkbox"> Remember me</label>
-            <a href="#" class="float-right">Forgot Password?</a>
+            <a href="/forgotPass" class="float-right">Forgot Password?</a>
         </div>        
     </form>
     <p class="text-center"><a href="/sighnup">Create an Account</a></p>
