--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -21,6 +21,19 @@
             <input type="password" class="form-control" placeholder="Confrim Password" required="required" name="password2" id="password2">
         </div>
         <div class="form-group">
+            <select class="form-select form-control" aria-label="Default select example" name="question" required="required">
+                <option selected>Select a security question:</option>
+                <option value="1">What is the name of a college you applied to but didn’t attend?</option>
+                <option value="2">Where was the destination of your most memorable school field trip?</option>
+                <option value="3">What was the name of your first stuffed toy?</option>
+                <option value="4">What was the name of the first school you remember attending?</option>
+                <option value="5">What was your driving instructor's first name?</option>
+              </select>
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Answer" required="required" name="answer">
+        </div>
+        <div class="form-group">
             <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
         </div>
              
